# centrex-state-prep

./: MANIFEST.in  README.md  pyproject.toml  setup.py
examples/SPA/: SPA basic idea.ipynb
examples/SPA/Experimental verification/: Naive SPA - J = 0 to 1.ipynb  Naive SPA - J = 1 to 2.ipynb  SPA - J23 RC background.ipynb  SPA1 - J12 RC background.ipynb  SPA1 - no BG.ipynb  SPA1 - parameter scans with SPA and RC background.ipynb  SPA1 - parameter scans.ipynb  SPA2 - only SPA background - start in J1.ipynb  SPA2 - parameter scans with SPA and RC background.ipynb  SPA2 - parameter scans- with imperfect SPA1.ipynb  SPA2 - parameter scans.ipynb  SPA2 no background.ipynb  State evolution for experimental testing of SPA - J = 0.ipynb  State evolution for experimental testing of SPA - J = 1 - no shield.ipynb  State evolution for experimental testing of SPA - J = 1.ipynb  (+2 more)
examples/SPB/: SPB adiabatic passage to J1_pmp - BesselGaussian.ipynb  SPB adiabatic passage to J1_pmp - Earth field.ipynb  SPB adiabatic passage to J1_pmp - basic idea.ipynb  SPB adiabatic passage to J1_pmp - polarization purity.ipynb  SPB adiabatic passage to J1_pmp-background field.ipynb  SPB adiabatic passage to J1_pmp.ipynb  SPB adiabatic passage to J1_ppm.ipynb
examples/SPB_high_field/: SPB adiabatic passage to J1_pmp - basic idea-BesselGaussian.ipynb  SPB adiabatic passage to J1_pmp - basic idea.ipynb  SPB adiabatic passage to J1_pmp-background field.ipynb
src/state_prep/: electric_fields.py  hamiltonians.py  magnetic_fields.py  microwaves.py  plotters.py  simulator.py  utils.py
(+27 files in other folders)
